link for shortpixel account

--- a/res/scss/view/_settings.scss
+++ b/res/scss/view/_settings.scss
@@ -14,8 +14,6 @@
   	margin-left: 2px;
 	}
 
-
-
 	.shortpixel-key-valid {
 	  //  font-weight: bold;
 		//	margin-left: 25px;
@@ -24,12 +22,12 @@
 
 	}
 
-
 	/* TABS CONTROLS */
+	/*
 	.sp-column-actions-template + .sp-column-info {
 	    display: none;
 	}
-
+*/
 
 	.button-primary, .button-primary:focus {
 		//background-color: $color-darkest;
@@ -48,11 +46,9 @@
 		 cursor:pointer;
 	}
 
-	/* .submit {
-		.button {
-			min-height: 44px;
-		}
-	} */
+
+
+/*
   .top-menu
   {
       font-size: 18px;
@@ -117,6 +113,8 @@
 				}
 		} // optimized thing
   } // top menu
+
+*/
 
   .upgrade-banner
   {
