--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -81,11 +81,78 @@ div.spio-modal-title {
 
 .wrap.is-shortpixel-settings-page {
   /* TABS CONTROLS */
-  /* .submit {
-  	.button {
-  		min-height: 44px;
+  /*
+  	.sp-column-actions-template + .sp-column-info {
+  	    display: none;
   	}
-  } */
+  */
+  /*
+    .top-menu
+    {
+        font-size: 18px;
+  	  display: flex;
+  	  width: 100%;
+  	  min-height: 50px;
+  	  align-items: center;
+  	  margin: 15px 0;
+  	  position: relative;
+  	  @include breakpoint(0, 1200px)
+  	  {
+  		  margin-bottom: 50px;
+  	  }
+
+  		.links
+  		{
+  	    	a { font-size: 18px; margin-right: 8px; white-space: nowrap; line-height: 26px;}
+  			padding-right: 195px;
+  			flex: 12 4 auto;
+  		}
+  		.quota-remaining
+  		{
+  			font-size: 13px;
+  		}
+  	    .spio-status-box {
+  			text-align: center;
+  			position: absolute;
+  			top: -49px;
+  			right: 0;
+  			padding: 5px 10px;
+  			background: white;
+  			box-shadow: 0 3px 3px rgba(0,0,0,0.1);
+  			z-index: 1;
+  		}
+  		.pie-wrapper
+  		{
+  			flex: 4 2 auto;
+  			min-width: 100px;
+  			display: inline-block;
+  		}
+  		div.sp-bulk-summary {
+
+  				z-index: 10;
+
+
+  				span {
+  					margin: 0;
+  					font-size: 12px;
+  					padding: 4px 8px;
+  					font-weight: 700;
+  					border-radius: 3px;
+  					white-space: nowrap;
+  					color: $color-darkest;
+  				}
+  				@include breakpoint(0,1500px)
+  				{
+
+  					.opt-circle-average {
+  							width: 100px;
+  							height: 100px;
+  					}
+  				}
+  		} // optimized thing
+    } // top menu
+
+  */
   /* In-view notice ( not on top, between the options ) - styled after WP notice */
   /* Specific styles for advanced settings tab */
   /*
@@ -95,191 +162,6 @@ div.spio-modal-title {
      }
   }
   */
-}
-.wrap.is-shortpixel-settings-page header {
-  background: #fff;
-  text-align: center;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 10px auto;
-  margin-left: -22px;
-  margin-top: -10px;
-  margin-right: -22px;
-  margin-bottom: 10px;
-  padding: 8px 16px;
-  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
-}
-.wrap.is-shortpixel-settings-page header h1 {
-  line-height: 50px;
-}
-.wrap.is-shortpixel-settings-page header img {
-  vertical-align: bottom;
-  padding-bottom: 5px;
-  margin-right: 8px;
-  margin-left: 1.1em;
-}
-.wrap.is-shortpixel-settings-page header .top-buttons {
-  margin-right: 4em;
-}
-.wrap.is-shortpixel-settings-page header .top-buttons button {
-  color: #fff;
-  background: #1ABDCA;
-  padding: 10px 12px;
-  border: 0;
-  margin: 4px;
-  font-family: "Roboto";
-  font-weight: 700;
-  border-radius: 6px;
-}
-.wrap.is-shortpixel-settings-page header .top-buttons button i.user {
-  width: 15px;
-  height: 15px;
-  vertical-align: text-top;
-  filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(20%) hue-rotate(283deg) brightness(105%) contrast(105%);
-}
-.wrap.is-shortpixel-settings-page header .top-buttons button i.switch {
-  width: 18px;
-  height: 12px;
-}
-.wrap.is-shortpixel-settings-page header .top-buttons button i.notifications {
-  width: 14px;
-  height: 14px;
-  filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(251deg) brightness(108%) contrast(108%);
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon {
-  width: 25px;
-  height: 25px;
-  display: inline-block;
-  background-repeat: no-repeat;
-  background-size: cover;
-  line-height: 25px;
-  vertical-align: middle;
-  margin-right: 4px;
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.alert {
-  background-image: url("../images/icon/alert.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.arrow-right {
-  background-image: url("../images/icon/arrow-right.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.arrows-left-right {
-  background-image: url("../images/icon/arrows-left-right.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.arrows-up-down {
-  background-image: url("../images/icon/arrows-up-down.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.box-archive {
-  background-image: url("../images/icon/box-archive.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.bulk {
-  background-image: url("../images/icon/bulk.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.chevron {
-  background-image: url("../images/icon/chevron.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.close {
-  background-image: url("../images/icon/close.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.cart {
-  background-image: url("../images/icon/cart.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.dashboard {
-  background-image: url("../images/icon/dashboard.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.debug {
-  background-image: url("../images/icon/debug.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.delivery {
-  background-image: url("../images/icon/delivery.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.exclusions {
-  background-image: url("../images/icon/exclusions.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.edit {
-  background-image: url("../images/icon/edit.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.eye {
-  background-image: url("../images/icon/eye.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.file {
-  background-image: url("../images/icon/file.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.fix {
-  background-image: url("../images/icon/fix.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.feedback {
-  background-image: url("../images/icon/feedback.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.help {
-  background-image: url("../images/icon/help.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.integrations {
-  background-image: url("../images/icon/integrations.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.optimization {
-  background-image: url("../images/icon/optimization.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.processing {
-  background-image: url("../images/icon/processing.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.notifications {
-  background-image: url("../images/icon/notifications.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.robo {
-  background-image: url("../images/icon/robo.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.rocket {
-  background-image: url("../images/icon/rocket.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.tools {
-  background-image: url("../images/icon/tools.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.trash {
-  background-image: url("../images/icon/trash.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.webp_avif {
-  background-image: url("../images/icon/webp_avif.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.photo {
-  background-image: url("../images/icon/photo.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.ok {
-  background-image: url("../images/icon/ok.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.warning {
-  background-image: url("../images/icon/warning.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.key {
-  background-image: url("../images/icon/key.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.save {
-  background-image: url("../images/icon/save.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.switch {
-  background-image: url("../images/icon/switch.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.help-circle {
-  background-image: url("../images/icon/help-circle.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-icon.user {
-  background-image: url("../images/icon/user.svg");
-}
-.wrap.is-shortpixel-settings-page .shortpixel-illustration {
-  display: inline-block;
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 50px;
-  height: 50px;
-}
-.wrap.is-shortpixel-settings-page .shortpixel-illustration.wizzard-done {
-  background-image: url("../images/illustration/wizzard-done.svg");
-  width: 70px;
-  height: 70px;
-}
-.wrap.is-shortpixel-settings-page .shortpixel-illustration.cocktail {
-  background-image: url("../images/illustration/cocktail.svg");
-  height: 104px;
 }
 .wrap.is-shortpixel-settings-page.simple .is-advanced, .wrap.is-shortpixel-settings-page.quick-tour .is-advanced {
   display: none;
@@ -317,7 +199,7 @@ div.spio-modal-title {
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-settings-page .shortpixel-settings button:hover, .wrap.is-shortpixel-settings-page .shortpixel-settings .button-setting:hover {
-  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
+  background: #32d7e5;
 }
 .wrap.is-shortpixel-settings-page .shortpixel-settings button i.switch, .wrap.is-shortpixel-settings-page .shortpixel-settings .button-setting i.switch {
   width: 18px;
@@ -528,6 +410,195 @@ div.spio-modal-title {
     width: 95%;
   }
 }
+.wrap.is-shortpixel-settings-page header {
+  background: #fff;
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px auto;
+  margin-left: -22px;
+  margin-top: -10px;
+  margin-right: -22px;
+  margin-bottom: 10px;
+  padding: 8px 16px;
+  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
+}
+.wrap.is-shortpixel-settings-page header h1 {
+  line-height: 50px;
+}
+.wrap.is-shortpixel-settings-page header img {
+  vertical-align: bottom;
+  padding-bottom: 5px;
+  margin-right: 8px;
+  margin-left: 1.1em;
+}
+.wrap.is-shortpixel-settings-page header .top-buttons {
+  margin-right: 4em;
+}
+.wrap.is-shortpixel-settings-page header .top-buttons a, .wrap.is-shortpixel-settings-page header .top-buttons button {
+  color: #fff;
+  background: #1ABDCA;
+  padding: 10px 12px;
+  border: 0;
+  margin: 4px;
+  font-family: "Roboto";
+  font-weight: 700;
+  border-radius: 6px;
+  text-decoration: none;
+  transition: all 0.1s ease-in-out;
+}
+.wrap.is-shortpixel-settings-page header .top-buttons a:hover, .wrap.is-shortpixel-settings-page header .top-buttons button:hover {
+  background: #32d7e5;
+}
+.wrap.is-shortpixel-settings-page header .top-buttons a i.switch, .wrap.is-shortpixel-settings-page header .top-buttons button i.switch {
+  width: 18px;
+  height: 12px;
+}
+.wrap.is-shortpixel-settings-page header .top-buttons a i.notifications, .wrap.is-shortpixel-settings-page header .top-buttons button i.notifications {
+  width: 14px;
+  height: 14px;
+  filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(251deg) brightness(108%) contrast(108%);
+}
+.wrap.is-shortpixel-settings-page header .top-buttons .header-button i {
+  filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(20%) hue-rotate(283deg) brightness(105%) contrast(105%);
+  margin-right: 4px;
+  height: 25px;
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon {
+  width: 25px;
+  height: 25px;
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-size: cover;
+  line-height: 25px;
+  vertical-align: middle;
+  margin-right: 4px;
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.alert {
+  background-image: url("../images/icon/alert.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.arrow-right {
+  background-image: url("../images/icon/arrow-right.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.arrows-left-right {
+  background-image: url("../images/icon/arrows-left-right.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.arrows-up-down {
+  background-image: url("../images/icon/arrows-up-down.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.box-archive {
+  background-image: url("../images/icon/box-archive.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.bulk {
+  background-image: url("../images/icon/bulk.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.chevron {
+  background-image: url("../images/icon/chevron.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.close {
+  background-image: url("../images/icon/close.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.cart {
+  background-image: url("../images/icon/cart.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.dashboard {
+  background-image: url("../images/icon/dashboard.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.debug {
+  background-image: url("../images/icon/debug.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.delivery {
+  background-image: url("../images/icon/delivery.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.exclusions {
+  background-image: url("../images/icon/exclusions.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.edit {
+  background-image: url("../images/icon/edit.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.eye {
+  background-image: url("../images/icon/eye.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.file {
+  background-image: url("../images/icon/file.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.fix {
+  background-image: url("../images/icon/fix.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.feedback {
+  background-image: url("../images/icon/feedback.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.help {
+  background-image: url("../images/icon/help.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.integrations {
+  background-image: url("../images/icon/integrations.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.optimization {
+  background-image: url("../images/icon/optimization.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.processing {
+  background-image: url("../images/icon/processing.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.notifications {
+  background-image: url("../images/icon/notifications.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.robo {
+  background-image: url("../images/icon/robo.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.rocket {
+  background-image: url("../images/icon/rocket.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.tools {
+  background-image: url("../images/icon/tools.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.trash {
+  background-image: url("../images/icon/trash.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.webp_avif {
+  background-image: url("../images/icon/webp_avif.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.photo {
+  background-image: url("../images/icon/photo.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.ok {
+  background-image: url("../images/icon/ok.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.warning {
+  background-image: url("../images/icon/warning.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.key {
+  background-image: url("../images/icon/key.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.save {
+  background-image: url("../images/icon/save.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.switch {
+  background-image: url("../images/icon/switch.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.help-circle {
+  background-image: url("../images/icon/help-circle.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-icon.user {
+  background-image: url("../images/icon/user.svg");
+}
+.wrap.is-shortpixel-settings-page .shortpixel-illustration {
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+}
+.wrap.is-shortpixel-settings-page .shortpixel-illustration.wizzard-done {
+  background-image: url("../images/illustration/wizzard-done.svg");
+  width: 70px;
+  height: 70px;
+}
+.wrap.is-shortpixel-settings-page .shortpixel-illustration.cocktail {
+  background-image: url("../images/illustration/cocktail.svg");
+  height: 104px;
+}
 .wrap.is-shortpixel-settings-page .setting-tab .shortpixel-compression-options label.lossy span {
   border-top-left-radius: 6px;
   border-bottom-left-radius: 6px;
@@ -673,75 +744,12 @@ div.spio-modal-title {
 .wrap.is-shortpixel-settings-page .shortpixel-key-valid {
   display: inline-block;
 }
-.wrap.is-shortpixel-settings-page .sp-column-actions-template + .sp-column-info {
-  display: none;
-}
 .wrap.is-shortpixel-settings-page .button-primary:hover, .wrap.is-shortpixel-settings-page .button-primary:focus:hover {
   background-color: #1cbecb;
   border-color: #0f6a7d;
 }
 .wrap.is-shortpixel-settings-page button {
   cursor: pointer;
-}
-.wrap.is-shortpixel-settings-page .top-menu {
-  font-size: 18px;
-  display: flex;
-  width: 100%;
-  min-height: 50px;
-  align-items: center;
-  margin: 15px 0;
-  position: relative;
-}
-@media (max-width: 1200px) {
-  .wrap.is-shortpixel-settings-page .top-menu {
-    margin-bottom: 50px;
-  }
-}
-.wrap.is-shortpixel-settings-page .top-menu .links {
-  padding-right: 195px;
-  flex: 12 4 auto;
-}
-.wrap.is-shortpixel-settings-page .top-menu .links a {
-  font-size: 18px;
-  margin-right: 8px;
-  white-space: nowrap;
-  line-height: 26px;
-}
-.wrap.is-shortpixel-settings-page .top-menu .quota-remaining {
-  font-size: 13px;
-}
-.wrap.is-shortpixel-settings-page .top-menu .spio-status-box {
-  text-align: center;
-  position: absolute;
-  top: -49px;
-  right: 0;
-  padding: 5px 10px;
-  background: white;
-  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
-  z-index: 1;
-}
-.wrap.is-shortpixel-settings-page .top-menu .pie-wrapper {
-  flex: 4 2 auto;
-  min-width: 100px;
-  display: inline-block;
-}
-.wrap.is-shortpixel-settings-page .top-menu div.sp-bulk-summary {
-  z-index: 10;
-}
-.wrap.is-shortpixel-settings-page .top-menu div.sp-bulk-summary span {
-  margin: 0;
-  font-size: 12px;
-  padding: 4px 8px;
-  font-weight: 700;
-  border-radius: 3px;
-  white-space: nowrap;
-  color: #0f6a7d;
-}
-@media (max-width: 1500px) {
-  .wrap.is-shortpixel-settings-page .top-menu div.sp-bulk-summary .opt-circle-average {
-    width: 100px;
-    height: 100px;
-  }
 }
 .wrap.is-shortpixel-settings-page .upgrade-banner {
   width: 220px;
@@ -1081,7 +1089,7 @@ div.spio-modal-title {
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-settings-page #tab-overview .wrapper .dashboard-button:hover {
-  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
+  background: #32d7e5;
 }
 .wrap.is-shortpixel-settings-page #tab-overview .wrapper .dashboard-button i.switch {
   width: 18px;
@@ -1798,7 +1806,7 @@ div.spio-modal-title {
 .wrap.is-shortpixel-settings-page #tab-tools .button {
   min-height: 44px;
   color: #1ABDCA;
-  background-color: rgb(232.25, 232.25, 232.25);
+  background-color: #e8e8e8;
   border-radius: 6px;
   font-weight: 700;
   letter-spacing: 0.3px;
@@ -1806,7 +1814,7 @@ div.spio-modal-title {
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-settings-page #tab-tools .button:hover {
-  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
+  background: #32d7e5;
   color: #fff;
 }
 .wrap.is-shortpixel-settings-page #tab-tools .option, .wrap.is-shortpixel-settings-page #tab-tools setting {
