--- a/res/scss/elements/_header.scss
+++ b/res/scss/elements/_header.scss
@@ -30,34 +30,17 @@ header
 		{
 			margin-right: 4em;
 			// Items for whole page, including header.
-			button {
-					color: #fff;
-					background: $blue_default;
-					padding: 10px 12px;
-					border: 0;
-					margin: 4px; // see if this works.
-					font-family: 'Roboto';
-					font-weight: 700;
-					border-radius: 6px;
-					i.user {
-						width: 15px;
-						height: 15px;
-						vertical-align: text-top;
-						filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(20%) hue-rotate(283deg) brightness(105%) contrast(105%);
-					}
-					i.switch {
-						 width: 18px;
-						 height: 12px;
-					}
-					i.notifications
-					{
-						 width: 14px;
-						 height: 14px;
-						 filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(251deg) brightness(108%) contrast(108%);;
-					}
-
-					// @todo probably something for icon left /right here.
-			}
+      a, button
+      {
+         @include shortpixel-button;
+      }
+      .header-button {
+         i {
+            filter: $filter_white;
+            margin-right: 4px;
+            height: 25px; 
+         }
+      }
 		}
 
 }
