- Fix header notices - Fixes for settings overview / header / buttons

--- a/res/scss/shortpixel-settings.scss
+++ b/res/scss/shortpixel-settings.scss
@@ -11,8 +11,8 @@
 
   @import 'elements/colors';
   @import 'elements/breakpoints';
+  @import 'elements/mixins';
   @import 'view/settings-structure';
-
   @import 'elements/header';
   @import 'elements/icons';
   @import 'view/settings-optimisation';
