--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -7,6 +7,7 @@
 {
 	@import 'elements/colors';
 	@import 'elements/animation';
+	@import 'elements/mixins';
 	@import 'elements/header';
 	@import 'elements/icons';
 
