Fix notifications in settings and bulk, improve ratings

--- a/res/scss/view/_settings-overview.scss
+++ b/res/scss/view/_settings-overview.scss
@@ -161,6 +161,10 @@
              margin: 0 0 10px 0;
              img {
                width: 110px;
+               margin-top: 10px;
+               &:hover {
+                 content: url("../images/icon/7stars.svg");
+               }
              }
              .button
              {
