Switches in settings

--- a/res/scss/view/_settings-advanced.scss
+++ b/res/scss/view/_settings-advanced.scss
@@ -1,9 +1,10 @@
 /* Specific styles for advanced settings tab */
 
-	.deliverWebpTypes, .deliverAlteringTypesPicture {
+       .deliverWebpTypes, .picture-option-list {
     margin: 16px 0 16px 16px;
-		padding: 2px; // allow to full draw of checkbox
-	}
+               padding: 2px; // allow to full draw of checkbox
+       }
+
 
 	.avifNoticeDisabled
 	{
